--- a/index.html
+++ b/index.html
@@ -126,22 +126,45 @@
         </div>
     
     <ul class="list-group">
-        <li class="list-group-item list-group-success col-lg-12 col-md-12 col-sm-12 col-xs-12 environment-li">
+        <li class="list-group-item list-group-item-success col-lg-12 col-md-12 col-sm-12 col-xs-12 environment-li">
             <h4>New FootBall ground</h4>
-            <img src="https://th.bing.com/th/id/Rc99c23ee718e4be08c15021d13b91d18?rik=Bax5yS%2bx%2bt7i4Q&riu=http%3a%2f%2fmcardlesport.co.uk%2fwp-content%2fuploads%2f2016%2f09%2fthorncliffe-edited.jpg%3fx27708&ehk=nyf8xZVBhaGPSRKkeLul2S%2fz4EFwTWKQK46wPeJeuiY%3d&risl=&pid=ImgRaw.png" class="img-responsive col-lg-5 col-md-5 col-sm-5 col-xs-12">
-            <p class="list-group-item-text col-lg-7 col-md-7 col-sm-7 col-xs-12">
+            <img src="https://th.bing.com/th/id/Rc99c23ee718e4be08c15021d13b91d18?rik=Bax5yS%2bx%2bt7i4Q&riu=http%3a%2f%2fmcardlesport.co.uk%2fwp-content%2fuploads%2f2016%2f09%2fthorncliffe-edited.jpg%3fx27708&ehk=nyf8xZVBhaGPSRKkeLul2S%2fz4EFwTWKQK46wPeJeuiY%3d&risl=&pid=ImgRaw.png" class="img-responsive col-lg-6 col-md-6 col-sm-6 col-xs-12">
+            <p class="list-group-item-text col-lg-6 col-md-6 col-sm-6 col-xs-12">
                 Our school's new football was build in 2019 and the court is big and there is artificial grass. 
             </p>
         </li>
     </ul>
     <ul class="list-group">
-    <li class="list-group-item list-group-success col-lg-12 col-md-12 col-sm-12 col-xs-12 environment-li">
+    <li class="list-group-item list-group-item-warning col-lg-12 col-md-12 col-sm-12 col-xs-12 environment-li">
             <h4> Our new canteen</h4>
-            <img src="https://i.pinimg.com/originals/ec/96/8e/ec968eeddd0293c3688db196e38f3074.jpg">
-            <p class="list-group-item-text col-lg-7 col-md-7 col-sm-7 col-xs-12">
+            <img class="col-lg-6 col-md-6 col-sm-6 col-xs-12" src="https://i.pinimg.com/originals/ec/96/8e/ec968eeddd0293c3688db196e38f3074.jpg">
+        <hr>
+            <p class="list-group-item-text col-lg-6 col-md-6 col-sm-6 col-xs-12">
                 our new canteen has many item's like popsicle, pizza and many more.
             </p>
         </li>
     </ul>
+    
+        <img src="https://www.nettv4u.com/imagine/06-12-2019/jiiva.jpg" class="img-reponsive">
+        <hr>
+        <p class="text-primary">Jiiva</p>
+    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6" id="aluminilist" data-toggle="modal" data-target="#school_alumini1">
+    </div>
+      <div class="modal fade" id="sa_1">
+          <div class="modal-dialog">
+              <div class="modal-content">
+                  <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal">&times;</button>
+                      <h4 class="modal-title">Jiva</h4>
+                  </div>
+                  <div class="modal-body">
+                      <img src="https://www.nettv4u.com/imagine/06-12-2019/jiiva.jpg" class="img-responsive img_modal">
+                      <p class="p_modal">Jiiva is an indian actor.<br>
+                          <a href="https://en.wikipedia.org/wiki/Jiiva"> <b>To know more</b></a>
+                      </p>
+                  </div>
+              </div>
+          </div>
+    </div>
 </body>
 </html> 
